minio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: mlflow

spec:
  replicas: 1

  selector:
    matchLabels:
      app: minio

  template:
    metadata:
      labels:
        app: minio

    spec:
      containers:
        - name: minio
          image: minio/minio:latest

          args:
            - server
            - /data
            - --console-address
            - ":9001"

          ports:
            - containerPort: 9000
            - containerPort: 9001

          volumeMounts:
            - mountPath: /data
              name: minio-data

      volumes:
        - name: minio-data
          emptyDir: {}
