mlflow.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: mlflow

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mlflow

  template:
    metadata:
      labels:
        app: mlflow

    spec:
      containers:
        - name: mlflow
          image: ghcr.io/mlflow/mlflow:v2.12.1

          command:
            - /bin/sh
            - -c

          args:
            - |
              pip install psycopg2-binary boto3 && \
              mlflow server \
              --host 0.0.0.0 \
              --port 5000 \
              --backend-store-uri postgresql://mlflow:mlflow123@postgres:5432/mlflowdb \
              --default-artifact-root s3://mlflow/

          ports:
            - containerPort: 5000

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"

            limits:
              memory: "512Mi"
              cpu: "300m"
