minio-api-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-api-nodeport
  namespace: mlflow
spec:
  type: NodePort
  selector:
    app: minio
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000
      nodePort: 30900
