minio-console-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-console-nodeport
  namespace: mlflow
spec:
  type: NodePort
  selector:
    app: minio
  ports:
    - name: console
      port: 9001
      targetPort: 9001
      nodePort: 30901
