mlflow-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-nodeport
  namespace: mlflow
spec:
  type: NodePort
  selector:
    app: mlflow
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
