mlflow-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: mlflow
spec:
  type: ClusterIP
  selector:
    app: mlflow
  ports:
  - name: http
    port: 5000
    targetPort: 5000
